--- a/public/main.css
+++ b/public/main.css
@@ -33,3 +33,9 @@ nav li {
     background-color: #4CAF50; /* Green */
   color: white;
 }
+
+.chartDiv {
+    padding: 10px;
+    height: 50%;
+    width: 50%;
+}
